# LabWork-2.5

./: CMakeLists.txt  README.md
Main/: CMakeLists.txt  main.cpp
TError/: TError.h
TString/: CMakeLists.txt  TString.cpp  TString.h
TVector/: CMakeLists.txt  Header.h  TCircle.h  TLine.h  TPoint.h  TVector.h  UML.cpp
